--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<body background ="final car.png">
 
 <body>
 
-    <div style="color:blue">
+    <div style="color:">
         <form action="{{ url_for('predict')}}" method="post">
             <h2>Predictive analysis</h2>
             <h3>Year</h3>
@@ -48,7 +49,7 @@
 
     <style>
         body {
-            background-color: lightslategray;
+            background-color: yellow;
             text-align: center;
             padding: 0px;
         }
@@ -87,7 +88,7 @@
         }
         
         #fuel:hover {
-            background-color: coral;
+            background-color: white;
         }
         
         #research {
@@ -99,7 +100,7 @@
         }
         
         #research:hover {
-            background-color: coral;
+            background-color: white;
         }
         
         #resea {
@@ -111,7 +112,7 @@
         }
         
         #resea:hover {
-            background-color: coral;
+            background-color: white;
         }
         
         #sub {
@@ -123,7 +124,7 @@
         }
         
         #sub:hover {
-            background-color: darkcyan;
+            background-color: #fdcc04;
         }
         
         #first {
